Use JDK 8 API only for now
Signed-off-by: Thomas Segismont <tsegismont@gmail.com>